changes done to frontend

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -56,4 +56,5 @@ jobs:
 
             sudo docker build -t frontend-image -f ./Dockerfile .
             sudo docker run -d -p 3000:3000 --name frontend-container frontend-image
-            echo "✅ Frontend deployed successfully"
+            echo "✅ Frontend deployed successfullyyyyy"
+            
