--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,7 +1,13 @@
-FROM node:20-alpine
+FROM node:20-alpine as builder
 WORKDIR /app
 COPY package.json ./
 RUN npm install
 COPY . .
 EXPOSE 3000
-CMD ["npm", "start"]
+RUN ["npm", "run", "build"]
+
+FROM nginx:alpine
+COPY --from=builder /app/build /usr/share/nginx/html
+COPY nginx.conf /etc/nginx/conf.d/default.conf
+EXPOSE 80
+CMD ["nginx", "-g", "daemon off;"]
