--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -10,7 +10,7 @@ server {
     }
 
     location /api/ {
-        proxy_pass http://backend-cont:5000;
+        proxy_pass http://internalALB-1334936656.ap-south-1.elb.amazonaws.com:5000;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
